TEST_PROGRAMS/VALID/05/if_stmt_reg_brace.go
/* If statements */

package main

func main() {

	/* Regular braces, statement */
	if z:= true; z {
		println(z)
	}

}
