TEST_PROGRAMS/INVALID/05/multicharacter_rune.go
/* Multi-character rune. */

package main

var r rune = 'ab'

func main() {
	// Do nothing
}
